bug 68921 - align right interval time
git-svn-id: svn://svn.office.custis.ru/3rdparty/bugzilla.org/trunk@970 6955db30-a419-402b-8a0d-67ecbb4d7f56

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -575,3 +575,5 @@ filter:mask();
 .numeric_invalid { background-color: #FFE0E0; }
 
 .buglist-navbar { float: left; margin: 4pt; font-size: 120%; padding: 2pt; }
+
+.bz_interval_time_column { text-align: right; }
